.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:15:41 **** Build of configuration Debug for project masb-pot-s-firmware ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/components/masb_comm_s.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F401xE -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/components/masb_comm_s.d" -MT"Core/Src/components/masb_comm_s.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/components/masb_comm_s.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F401xE -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:105:20: error: storage size of 'myHandles' isn't known
   struct Handles_S myHandles;
                    ^~~~~~~~~
../Core/Src/main.c:108:3: warning: implicit declaration of function 'setup' [-Wimplicit-function-declaration]
   setup(&myHandles);
   ^~~~~
../Core/Src/main.c:116:4: warning: implicit declaration of function 'loop' [-Wimplicit-function-declaration]
    loop();
    ^~~~
../Core/Src/main.c:105:20: warning: unused variable 'myHandles' [-Wunused-variable]
   struct Handles_S myHandles;
                    ^~~~~~~~~
make: *** [Core/Src/subdir.mk:33: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
